# ggsql

./: .gitignore  .nojekyll  CLAUDE.md  Cargo.toml  EXAMPLES.md  INSTALLERS.md  PLAN-implicit-stats.md  PLAN-visualise-global-mapping.md  Packager.toml  README.md  examples.html  faq.html  get_started.html  index.html  installation.html  robots.txt  search.json  sitemap.xml  styles.scss
.github/workflows/: R-CMD-check.yaml  build.yaml  publish.yaml  python-release.yml  python.yml  release-installers.yml  release-packages.yml  wasm.yaml
doc/: _quarto.yml  examples.qmd  faq.qmd  get_started.qmd  ggsql.xml  index.qmd  index.quarto_ipynb_1  installation.qmd  styles.scss
doc/get_started/: _metadata.yml  anatomy.qmd  first_plot.qmd  installation.qmd
doc/syntax/: index.qmd
gallery/: index.html
gallery/examples/: bar-chart.html  faceted.html  histogram.html  line-chart.html  multi-layer.html  scatterplot.html
get_started/: first_plot.html  grammar.html  installation.html
ggsql-R/: DESCRIPTION
ggsql-jupyter/: Cargo.toml  README.md
ggsql-jupyter/src/: data_explorer.rs  display.rs  executor.rs  kernel.rs
ggsql-python/: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  pyproject.toml
ggsql-python-rest/: README.md  pyproject.toml
ggsql-python-rest/docs/plans/: 2026-02-06-ggsql-python-rest.md
ggsql-python-rest/src/ggsql_rest/: __init__.py  _app.py  _connections.py  _errors.py  _models.py
ggsql-python-rest/src/ggsql_rest/_routes/: _health.py  _query.py  _sessions.py
ggsql-python-rest/tests/: conftest.py  test_app.py  test_connections.py  test_errors.py  test_models.py  test_routes_health.py  test_routes_query.py  test_routes_sessions.py  test_routes_upload.py
ggsql-python/python/ggsql/: __init__.py  _ggsql.pyi  readers.py
ggsql-python/src/: lib.rs
ggsql-python/tests/: test_altair_e2e.py  test_ggsql.py
ggsql-vscode/: .vscodeignore  CHANGELOG.md  README.md  package.json
ggsql-vscode/examples/: sample.gsql
ggsql-vscode/src/: manager.ts
ggsql-vscode/syntaxes/: ggsql.tmLanguage.json
ggsql-wasm/: Cargo.toml  build-wasm.sh
ggsql-wasm/demo/: build.mjs  tsconfig.json
site_libs/bootstrap/: bootstrap-1ab7f617852fce30e69fe9ec1d8b3dd8.min.css  bootstrap-46e21902c3b8606b202d81e06abe9baf.min.css  bootstrap-75876b1abfe735b57d7179e0764bf742.min.css  bootstrap-906e5279b320c7a9927b2e3c4c1d4614.min.css  bootstrap-a5939c2ae72a7b0c79969b5f3e255c36.min.css  bootstrap-dark-7968eaf10f5f718b226ab48add9596f0.min.css  bootstrap-dark-94b57c8b454cc9c3df3757d9a61d1e94.min.css  bootstrap-dark-c615a8e522208a0492fce157e4bfc72e.min.css  bootstrap-dark-d26bc67d90384f6b3dac4cd27db4be95.min.css  bootstrap-dark-dd803ae926f158994701a8a87658416f.min.css
src/: Cargo.toml  api.rs  cli.rs  execute.rs  lib.rs  naming.rs  rest.rs  session.rs  utils.rs  validate.rs
syntax/: index.html
tree-sitter-ggsql/: grammar.js
tree-sitter-vvsql/: Cargo.toml  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-vvsql/bindings/c/: tree-sitter-vvsql.pc.in
tree-sitter-vvsql/bindings/c/tree_sitter/: tree-sitter-vizql.h
tree-sitter-vvsql/bindings/node/: binding.cc  binding_test.js  index.js
tree-sitter-vvsql/bindings/python/: __init__.py  binding.c
tree-sitter-vvsql/bindings/rust/: build.rs  lib.rs
tree-sitter-vvsql/queries/: highlights.scm
tree-sitter-vvsql/test/corpus/: basic.txt
wasm/: bundle.css  bundle.css.map  index.html  quarto.css  quarto.css.map
(+248 files in other folders)
