[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ggsql-rest"
version = "0.1.0"
description = "REST API server for ggsql with SQLAlchemy backend support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "ggsql>=0.1.0",
    "sqlalchemy>=2.0",
    "polars>=1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "httpx>=0.24"]
dev = ["ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/ggsql_rest"]
