[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ggsql-rest"
version = "0.1.0"
description = "REST API server for ggsql with SQLAlchemy backend support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "ggsql",
    "sqlalchemy>=2.0",
    "polars>=1.0",
    "python-multipart>=0.0.6",
]

[tool.uv.sources]
ggsql = { path = "../ggsql-python", editable = true }

[project.optional-dependencies]
test = ["pytest>=7.0", "httpx>=0.24"]
dev = ["ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/ggsql_rest"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
